feat: add link to contribute to page

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 	<title>Andrei Time</title>
 </head>
 <body>
-	<h1 class="hero-text">Andrei Time</h1>
-
+	<div class="andrei-time">
+		<h1 class="hero-text">Andrei Time</h1>
+		<a class="footer-link" target="_blank" href="https://github.com/WillMW02/andrei.krokh.in">Contribute to the site</a>
+	</div>
 	<script src="assets/js/index.js"></script>
 </body>
 </html>
